* Adding it here till a solution for fpcunit-based tests exists
git-svn-id: trunk@11087 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -7716,6 +7716,32 @@ tests/test/units/dos/tidos.pp svneol=native#text/plain
 tests/test/units/dos/tidos2.pp svneol=native#text/plain
 tests/test/units/dos/tverify.pp svneol=native#text/plain
 tests/test/units/dos/tversion.pp svneol=native#text/plain
+tests/test/units/fpcunit/fplists.pp svneol=native#text/plain
+tests/test/units/fpcunit/gencomptest.dpr svneol=native#text/plain
+tests/test/units/fpcunit/lists.pp svneol=native#text/plain
+tests/test/units/fpcunit/resref.inc svneol=native#text/plain
+tests/test/units/fpcunit/searchbuf.inc svneol=native#text/plain
+tests/test/units/fpcunit/sllist.inc svneol=native#text/plain
+tests/test/units/fpcunit/tbucketlist.lpi svneol=native#text/plain
+tests/test/units/fpcunit/tbucketlist.lpr svneol=native#text/plain
+tests/test/units/fpcunit/tcbucketlist.pp svneol=native#text/plain
+tests/test/units/fpcunit/tccollection.pp svneol=native#text/plain
+tests/test/units/fpcunit/tccomponent.pp svneol=native#text/plain
+tests/test/units/fpcunit/tccompstreaming.pp svneol=native#text/plain
+tests/test/units/fpcunit/tcfindnested.pp svneol=native#text/plain
+tests/test/units/fpcunit/tclinkedlist.pp svneol=native#text/plain
+tests/test/units/fpcunit/tclist.pp svneol=native#text/plain
+tests/test/units/fpcunit/tcpersistent.pp svneol=native#text/plain
+tests/test/units/fpcunit/tcresref.pp svneol=native#text/plain
+tests/test/units/fpcunit/tcstreaming.pp svneol=native#text/plain
+tests/test/units/fpcunit/tcstringlist.pp svneol=native#text/plain
+tests/test/units/fpcunit/tcstrutils.pp svneol=native#text/plain
+tests/test/units/fpcunit/tctparser.pp svneol=native#text/plain
+tests/test/units/fpcunit/testclasses.lpi svneol=native#text/plain
+tests/test/units/fpcunit/testclasses.lpr svneol=native#text/plain
+tests/test/units/fpcunit/testcomps.pp svneol=native#text/plain
+tests/test/units/fpcunit/tstrutils.lpi svneol=native#text/plain
+tests/test/units/fpcunit/tstrutils.lpr svneol=native#text/plain
 tests/test/units/math/tmask.inc svneol=native#text/plain
 tests/test/units/math/tmask.pp svneol=native#text/plain
 tests/test/units/math/tmask2.pp svneol=native#text/plain
