--- a/.gitattributes
+++ b/.gitattributes
@@ -3543,6 +3543,8 @@ packages/oracle/src/oro_interface.inc svneol=native#text/plain
 packages/oracle/src/ort.inc svneol=native#text/plain
 packages/os2units/Makefile svneol=native#text/plain
 packages/os2units/Makefile.fpc svneol=native#text/plain
+packages/os2units/examples/Makefile svneol=native#text/plain
+packages/os2units/examples/Makefile.fpc svneol=native#text/plain
 packages/os2units/examples/clktest.pas svneol=native#text/plain
 packages/os2units/examples/ftptest.pas svneol=native#text/plain
 packages/os2units/examples/lvmtest.pas svneol=native#text/plain
