--- a/.gitattributes
+++ b/.gitattributes
@@ -9383,6 +9383,7 @@ utils/fpdoc/fpdoc.css -text
 utils/fpdoc/fpdoc.pp svneol=native#text/plain
 utils/fpdoc/intl/Makefile svneol=native#text/plain
 utils/fpdoc/intl/dglobals.de.po svneol=native#text/plain
+utils/fpdoc/intl/dglobals.sk.po svneol=native#text/plain
 utils/fpdoc/intl/dwriter.de.po svneol=native#text/plain
 utils/fpdoc/intl/fpdoc.de.po svneol=native#text/plain
 utils/fpdoc/intl/fpdocmk.de.po svneol=native#text/plain
