* added files from linux to attempt having part of the startup in pascal
git-svn-id: trunk@11158 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -5054,12 +5054,16 @@ rtl/freebsd/i386/cprt0.as svneol=native#text/plain
 rtl/freebsd/i386/gprt0.as svneol=native#text/plain
 rtl/freebsd/i386/identpatch.sh svneol=native#text/plain
 rtl/freebsd/i386/prt0.as svneol=native#text/plain
+rtl/freebsd/i386/si_crt.inc svneol=native#text/plain
+rtl/freebsd/i386/si_prc.inc svneol=native#text/plain
 rtl/freebsd/i386/sighnd.inc svneol=native#text/plain
 rtl/freebsd/i386/x86.inc svneol=native#text/plain
 rtl/freebsd/i386/x86h.inc svneol=native#text/plain
 rtl/freebsd/pmutext.inc svneol=native#text/plain
 rtl/freebsd/pthread.inc svneol=native#text/plain
 rtl/freebsd/ptypes.inc svneol=native#text/plain
+rtl/freebsd/si_crt.pp svneol=native#text/plain
+rtl/freebsd/si_intf.inc svneol=native#text/plain
 rtl/freebsd/signal.inc svneol=native#text/plain
 rtl/freebsd/sysctlh.inc svneol=native#text/plain
 rtl/freebsd/sysnr.inc svneol=native#text/plain
