--- a/.gitattributes
+++ b/.gitattributes
@@ -5819,6 +5819,10 @@ rtl/palmos/api/systraps.inc svneol=native#text/plain
 rtl/palmos/api/systraps.pp svneol=native#text/plain
 rtl/palmos/api/ui.pp svneol=native#text/plain
 rtl/palmos/arm/prt0.as svneol=native#text/plain
+rtl/palmos/m68k/crt0.o -text
+rtl/palmos/m68k/gdbstub.o -text
+rtl/palmos/m68k/libcrt.a -text
+rtl/palmos/m68k/prt0.as svneol=native#text/plain
 rtl/palmos/os.inc svneol=native#text/plain
 rtl/palmos/pilot.pp svneol=native#text/plain
 rtl/palmos/readme -text
