+ Added more wince api interface units by Vasil Maximov.
git-svn-id: trunk@11204 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -4502,9 +4502,12 @@ packages/winceunits/src/gpsapi.pp svneol=native#text/plain
 packages/winceunits/src/gx.pp svneol=native#text/plain
 packages/winceunits/src/htmlctrl.pp svneol=native#text/plain
 packages/winceunits/src/iphlpapi.pp svneol=native#text/plain
+packages/winceunits/src/keybd.pp svneol=native#text/plain
 packages/winceunits/src/msgqueue.pp svneol=native#text/plain
+packages/winceunits/src/nled.pp svneol=native#text/plain
 packages/winceunits/src/notify.pp svneol=native#text/plain
 packages/winceunits/src/oleauto.pp svneol=native#text/plain
+packages/winceunits/src/phone.pp svneol=native#text/plain
 packages/winceunits/src/pimstore.pp svneol=native#text/plain
 packages/winceunits/src/pm.pp svneol=native#text/plain
 packages/winceunits/src/power.pp svneol=native#text/plain
