* renamed lexlib and yacclib units to avoid name clashes with that ones from tply
git-svn-id: trunk@11220 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -9513,12 +9513,12 @@ utils/h2pas/converu.pas svneol=native#text/plain
 utils/h2pas/h2pas.pas svneol=native#text/plain
 utils/h2pas/h2pas.y -text
 utils/h2pas/h2paspp.pas svneol=native#text/plain
-utils/h2pas/lexlib.pas svneol=native#text/plain
+utils/h2pas/h2plexlib.pas svneol=native#text/plain
+utils/h2pas/h2pyacclib.pas svneol=native#text/plain
 utils/h2pas/options.pas svneol=native#text/plain
 utils/h2pas/scan.l -text
 utils/h2pas/scan.pas svneol=native#text/plain
 utils/h2pas/testit.h -text
-utils/h2pas/yacclib.pas svneol=native#text/plain
 utils/h2pas/yylex.cod -text
 utils/h2pas/yyparse.cod -text
 utils/kalyptus/kalyptus -text
