* avoid ie 99080501 when overloading procedures with open arrays of widechar, resolves #11543
git-svn-id: trunk@11266 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -8350,6 +8350,7 @@ tests/webtbs/tw1133.pp svneol=native#text/plain
 tests/webtbs/tw11349.pp svneol=native#text/plain
 tests/webtbs/tw11354.pp svneol=native#text/plain
 tests/webtbs/tw1152.pp svneol=native#text/plain
+tests/webtbs/tw11543.pp svneol=native#text/plain
 tests/webtbs/tw1157.pp svneol=native#text/plain
 tests/webtbs/tw1157b.pp svneol=native#text/plain
 tests/webtbs/tw1181.pp svneol=native#text/plain
