* moved oo_copied into defoptions * record symtables are now handled properly as well if a record is copied, resolves #9144 * fixed a memory leak when copying classes * increased PPU version to 91
git-svn-id: trunk@11273 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -9205,6 +9205,8 @@ tests/webtbs/tw9128.pp svneol=native#text/plain
 tests/webtbs/tw9139.pp svneol=native#text/plain
 tests/webtbs/tw9139a.pp svneol=native#text/plain
 tests/webtbs/tw9141.pp svneol=native#text/plain
+tests/webtbs/tw9144a.pp svneol=native#text/plain
+tests/webtbs/tw9144b.pp svneol=native#text/plain
 tests/webtbs/tw9145.pp svneol=native#text/plain
 tests/webtbs/tw9161.pp svneol=native#text/plain
 tests/webtbs/tw9162.pp svneol=native#text/plain
