Patch from Petr Kristan for AnsiStrComp/AnsiStrIComp to fix comparison when both strings are empty and differ after the null character + test.
git-svn-id: trunk@11277 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -7855,6 +7855,7 @@ tests/test/units/system/tval4.pp -text
 tests/test/units/system/tval5.pp svneol=native#text/plain
 tests/test/units/system/tvalc.pp -text
 tests/test/units/sysutils/tastrcmp.pp svneol=native#text/plain
+tests/test/units/sysutils/tastrcmp1.pp svneol=native#text/plain
 tests/test/units/sysutils/texec1.pp svneol=native#text/plain
 tests/test/units/sysutils/texec2.pp svneol=native#text/plain
 tests/test/units/sysutils/textractquote.pp svneol=native#text/plain
