* renamed for consistency
git-svn-id: trunk@11289 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -135,7 +135,7 @@ compiler/dbgstabs.pas svneol=native#text/plain
 compiler/defcmp.pas svneol=native#text/plain
 compiler/defutil.pas svneol=native#text/plain
 compiler/export.pas svneol=native#text/plain
-compiler/expunix.pp svneol=native#text/plain
+compiler/expunix.pas svneol=native#text/plain
 compiler/finput.pas svneol=native#text/plain
 compiler/fmodule.pas svneol=native#text/plain
 compiler/fpccrc.pas svneol=native#text/plain
