+ some initial support for writing out llvm type information (orddef,     enumdef, records, arrays, strings, classrefdef)     (compile the compiler with OPT="-dsupport_llvm -Fullvm", then a      simple test program with -al and search for "= type" in the      generated assembler file)   o the llvm backend will always remain architecture-specific (that's how     llvm is designed), so in the long run there will be llvm-ppc, llvm-i386     etc backends. That's why llvmaasm and llvmbase exist in addition to the     architecture-specific files.
git-svn-id: branches/llvm@11330 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -200,6 +200,9 @@ compiler/ia64/ia64reg.dat svneol=native#text/plain
 compiler/impdef.pas svneol=native#text/plain
 compiler/import.pas svneol=native#text/plain
 compiler/link.pas svneol=native#text/plain
+compiler/llvm/aasmllvm.pas svneol=native#text/plain
+compiler/llvm/llvmbase.pas svneol=native#text/plain
+compiler/llvmdef.pas svneol=native#text/plain
 compiler/m68k/aasmcpu.pas svneol=native#text/plain
 compiler/m68k/ag68kgas.pas svneol=native#text/plain
 compiler/m68k/aoptcpu.pas svneol=native#text/plain
