* Initial testsuite from Sergei Gorelkin     * testgen.pp - an utility to convert w3.org tests from XML format       into fpcunit-compatible Pascal source. The official testsuite uses       xslt for conversion, but, since there is no xslt for Pascal, and no       xslt support in FCL yet, I wrote an utility.     * api.xml    - API 'database', needed by testgen.     * domunit.pp - an fpcunit extension, provides DOM-specific runtime       support.     * README_DOM - provides some instructions about putting it all together.
git-svn-id: trunk@11390 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -1647,7 +1647,11 @@ packages/fcl-xml/src/xmlutils.pp svneol=native#text/plain
 packages/fcl-xml/src/xmlwrite.pp svneol=native#text/plain
 packages/fcl-xml/src/xpath.pp svneol=native#text/plain
 packages/fcl-xml/tests/README svneol=native#text/plain
+packages/fcl-xml/tests/README_DOM svneol=native#text/plain
+packages/fcl-xml/tests/api.xml svneol=native#text/plain
+packages/fcl-xml/tests/domunit.pp svneol=native#text/plain
 packages/fcl-xml/tests/template.xml svneol=native#text/plain
+packages/fcl-xml/tests/testgen.pp svneol=native#text/plain
 packages/fcl-xml/tests/xmlts.pp svneol=native#text/plain
 packages/fftw/Makefile svneol=native#text/plain
 packages/fftw/Makefile.fpc svneol=native#text/plain
