--- a/.gitattributes
+++ b/.gitattributes
@@ -5876,6 +5876,19 @@ rtl/powerpc64/strings.inc svneol=native#text/plain
 rtl/powerpc64/stringss.inc svneol=native#text/plain
 rtl/powerpc64/strlen.inc svneol=native#text/plain
 rtl/powerpc64/strpas.inc svneol=native#text/plain
+rtl/qnx/Makefile svneol=native#text/plain
+rtl/qnx/Makefile.fpc svneol=native#text/plain
+rtl/qnx/dos.inc svneol=native#text/plain
+rtl/qnx/errno.inc svneol=native#text/plain
+rtl/qnx/i386/cprt0.as svneol=native#text/plain
+rtl/qnx/i386/crti.s svneol=native#text/plain
+rtl/qnx/i386/crtn.s svneol=native#text/plain
+rtl/qnx/osposix.inc svneol=native#text/plain
+rtl/qnx/osposixh.inc svneol=native#text/plain
+rtl/qnx/posix.pp svneol=native#text/plain
+rtl/qnx/qnx.inc svneol=native#text/plain
+rtl/qnx/signal.inc svneol=native#text/plain
+rtl/qnx/system.pp svneol=native#text/plain
 rtl/solaris/Makefile svneol=native#text/plain
 rtl/solaris/Makefile.fpc svneol=native#text/plain
 rtl/solaris/errno.inc svneol=native#text/plain
