* tests for checking type casts from integers/enums to TObjects in Delphi and non-Delphi mode (see r11398)
git-svn-id: trunk@11400 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -6451,6 +6451,8 @@ tests/tbf/tb0206.pp svneol=native#text/plain
 tests/tbf/tb0207.pp svneol=native#text/plain
 tests/tbf/tb0208.pp svneol=native#text/plain
 tests/tbf/tb0209.pp svneol=native#text/plain
+tests/tbf/tb0210.pp svneol=native#text/plain
+tests/tbf/tb0211.pp svneol=native#text/plain
 tests/tbf/ub0115.pp svneol=native#text/plain
 tests/tbf/ub0149.pp svneol=native#text/plain
 tests/tbf/ub0158a.pp svneol=native#text/plain
@@ -7001,6 +7003,7 @@ tests/tbs/tb0550b.pp svneol=native#text/plain
 tests/tbs/tb0551.pp svneol=native#text/plain
 tests/tbs/tb0552.pp svneol=native#text/plain
 tests/tbs/tb0553.pp svneol=native#text/plain
+tests/tbs/tb0554.pp svneol=native#text/plain
 tests/tbs/tb205.pp svneol=native#text/plain
 tests/tbs/ub0060.pp svneol=native#text/plain
 tests/tbs/ub0069.pp svneol=native#text/plain
