* more generic tests
git-svn-id: trunk@11405 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -8300,6 +8300,8 @@ tests/webtbs/tw10210.pp svneol=native#text/plain
 tests/webtbs/tw10224.pp svneol=native#text/plain
 tests/webtbs/tw1023.pp svneol=native#text/plain
 tests/webtbs/tw10233.pp svneol=native#text/plain
+tests/webtbs/tw10247.pp svneol=native#text/plain
+tests/webtbs/tw10247b.pp svneol=native#text/plain
 tests/webtbs/tw10320.pp svneol=native#text/plain
 tests/webtbs/tw10350.pp svneol=native#text/plain
 tests/webtbs/tw10371.pp svneol=native#text/plain
@@ -8384,6 +8386,10 @@ tests/webtbs/tw11349.pp svneol=native#text/plain
 tests/webtbs/tw11354.pp svneol=native#text/plain
 tests/webtbs/tw11372.pp svneol=native#text/plain
 tests/webtbs/tw11392.pp svneol=native#text/plain
+tests/webtbs/tw11431.pp svneol=native#text/plain
+tests/webtbs/tw11435b.pp svneol=native#text/plain
+tests/webtbs/tw11435c.pp svneol=native#text/plain
+tests/webtbs/tw11436.pp svneol=native#text/plain
 tests/webtbs/tw1152.pp svneol=native#text/plain
 tests/webtbs/tw11543.pp svneol=native#text/plain
 tests/webtbs/tw1157.pp svneol=native#text/plain
