* iconvenc packages, first version. Tested on Linux/x86 and FreeBSD/x86
git-svn-id: trunk@11407 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -2692,6 +2692,14 @@ packages/ibase/src/ibase60.pp svneol=native#text/plain
 packages/ibase/src/ibase60dyn.pp svneol=native#text/plain
 packages/ibase/tests/testib40.pp svneol=native#text/plain
 packages/ibase/tests/testib60.pp svneol=native#text/plain
+packages/iconvenc/Makefile svneol=native#text/plain
+packages/iconvenc/Makefile.fpc svneol=native#text/plain
+packages/iconvenc/examples/Makefile svneol=native#text/plain
+packages/iconvenc/examples/Makefile.fpc svneol=native#text/plain
+packages/iconvenc/examples/iconvtest.pp svneol=native#text/plain
+packages/iconvenc/fpmake.pp svneol=native#text/plain
+packages/iconvenc/manifest.xml svneol=native#text/plain
+packages/iconvenc/src/iconvenc.pas svneol=native#text/plain
 packages/imagemagick/Makefile svneol=native#text/plain
 packages/imagemagick/Makefile.fpc svneol=native#text/plain
 packages/imagemagick/examples/image.png -text svneol=unset#image/png
