--- a/.gitattributes
+++ b/.gitattributes
@@ -6103,6 +6103,7 @@ rtl/win/winsock.pp svneol=native#text/plain
 rtl/win/winsock2.pp svneol=native#text/plain
 rtl/win32/Makefile svneol=native#text/plain
 rtl/win32/Makefile.fpc svneol=native#text/plain
+rtl/win32/buildrtl.lpi svneol=native#text/plain
 rtl/win32/buildrtl.pp svneol=native#text/plain
 rtl/win32/classes.pp svneol=native#text/plain
 rtl/win32/gprt0.as svneol=native#text/plain
