--- a/.gitattributes
+++ b/.gitattributes
@@ -7973,6 +7973,7 @@ tests/webtbf/tw11254a.pp svneol=native#text/plain
 tests/webtbf/tw11295a.pp svneol=native#text/plain
 tests/webtbf/tw11295b.pp svneol=native#text/plain
 tests/webtbf/tw1157a.pp svneol=native#text/plain
+tests/webtbf/tw11619b.pp svneol=native#text/plain
 tests/webtbf/tw11632.pp svneol=native#text/plain
 tests/webtbf/tw1238.pp svneol=native#text/plain
 tests/webtbf/tw1251a.pp svneol=native#text/plain
