* properties properly set
git-svn-id: trunk@11475 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -492,7 +492,7 @@ compiler/systems/i_haiku.pas svneol=native#text/plain
 compiler/systems/i_linux.pas svneol=native#text/plain
 compiler/systems/i_macos.pas svneol=native#text/plain
 compiler/systems/i_morph.pas svneol=native#text/plain
-compiler/systems/i_nds.pas -text
+compiler/systems/i_nds.pas svneol=native#text/plain
 compiler/systems/i_nwl.pas svneol=native#text/plain
 compiler/systems/i_nwm.pas svneol=native#text/plain
 compiler/systems/i_os2.pas svneol=native#text/plain
@@ -515,7 +515,7 @@ compiler/systems/t_haiku.pas svneol=native#text/plain
 compiler/systems/t_linux.pas svneol=native#text/plain
 compiler/systems/t_macos.pas svneol=native#text/plain
 compiler/systems/t_morph.pas svneol=native#text/plain
-compiler/systems/t_nds.pas svneol=native#text/x-pascal
+compiler/systems/t_nds.pas svneol=native#text/plain
 compiler/systems/t_nwl.pas svneol=native#text/plain
 compiler/systems/t_nwm.pas svneol=native#text/plain
 compiler/systems/t_os2.pas svneol=native#text/plain
@@ -529,14 +529,14 @@ compiler/tgobj.pas svneol=native#text/plain
 compiler/tokens.pas svneol=native#text/plain
 compiler/utils/Makefile svneol=native#text/plain
 compiler/utils/Makefile.fpc svneol=native#text/plain
-compiler/utils/README -text
-compiler/utils/dummyas.pp -text
+compiler/utils/README svneol=native#text/plain
+compiler/utils/dummyas.pp svneol=native#text/plain
 compiler/utils/fixlog.pp svneol=native#text/plain
 compiler/utils/fixmsg.pp svneol=native#text/plain
 compiler/utils/fixnasm.pp svneol=native#text/plain
 compiler/utils/fixtab.pp svneol=native#text/plain
 compiler/utils/fpc.cft svneol=native#text/plain
-compiler/utils/fpc.mpw -text
+compiler/utils/fpc.mpw svneol=native#text/plain
 compiler/utils/fpc.pp svneol=native#text/plain
 compiler/utils/fpccfg.inc svneol=native#text/plain
 compiler/utils/fpcfg.inc svneol=native#text/plain
@@ -559,11 +559,11 @@ compiler/utils/mkx86ins.pp svneol=native#text/plain
 compiler/utils/mkx86reg.pp svneol=native#text/plain
 compiler/utils/msg2inc.pp svneol=native#text/plain
 compiler/utils/msgdif.pp svneol=native#text/plain
-compiler/utils/msgused.pl -text
+compiler/utils/msgused.pl svneol=native#text/plain
 compiler/utils/ppudump.pp svneol=native#text/plain
 compiler/utils/ppufiles.pp svneol=native#text/plain
 compiler/utils/ppumove.pp svneol=native#text/plain
-compiler/utils/samplecfg -text
+compiler/utils/samplecfg svneol=native#text/plain
 compiler/utils/usubst.pp svneol=native#text/plain
 compiler/verbose.pas svneol=native#text/plain
 compiler/version.pas svneol=native#text/plain
