+ defined FPC_FULLVERSION as integer constant containing the version,   release and patch level are always two digits so the version can   be compared numerically: so 2.2.2 results in 20202, resolves #11568
git-svn-id: trunk@11504 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -8408,6 +8408,7 @@ tests/webtbs/tw11435c.pp svneol=native#text/plain
 tests/webtbs/tw11436.pp svneol=native#text/plain
 tests/webtbs/tw1152.pp svneol=native#text/plain
 tests/webtbs/tw11543.pp svneol=native#text/plain
+tests/webtbs/tw11568.pp svneol=native#text/plain
 tests/webtbs/tw1157.pp svneol=native#text/plain
 tests/webtbs/tw1157b.pp svneol=native#text/plain
 tests/webtbs/tw11619.pp svneol=native#text/plain
