* add GtkScaleButton and GtkVolumeButton * add missing gtk2.8+ functions for GtkTextMark and GtkTextIter
git-svn-id: trunk@11506 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -2421,8 +2421,16 @@ packages/gtk2/src/gtk2x11/include/xsettings-client.inc svneol=native#text/plain
 packages/gtk2/src/gtk2x11/include/xsettings-common.inc svneol=native#text/plain
 packages/gtk2/src/gtk2x11/scripts/gdkx11_h2pas.sh svneol=native#text/plain
 packages/gtk2/src/gtkext/gtk2ext.pp svneol=native#text/plain
+packages/gtk2/src/gtkext/gtkscalebutton.inc svneol=native#text/plain
+packages/gtk2/src/gtkext/gtkscalebuttonh.inc svneol=native#text/plain
 packages/gtk2/src/gtkext/gtkstatusicon.inc svneol=native#text/plain
 packages/gtk2/src/gtkext/gtkstatusiconh.inc svneol=native#text/plain
+packages/gtk2/src/gtkext/gtktextiter.inc svneol=native#text/plain
+packages/gtk2/src/gtkext/gtktextiterh.inc svneol=native#text/plain
+packages/gtk2/src/gtkext/gtktextmark.inc svneol=native#text/plain
+packages/gtk2/src/gtkext/gtktextmarkh.inc svneol=native#text/plain
+packages/gtk2/src/gtkext/gtkvolumebutton.inc svneol=native#text/plain
+packages/gtk2/src/gtkext/gtkvolumebuttonh.inc svneol=native#text/plain
 packages/gtk2/src/gtkglext/gdkglconfig.inc svneol=native#text/plain
 packages/gtk2/src/gtkglext/gdkglcontext.inc svneol=native#text/plain
 packages/gtk2/src/gtkglext/gdkgldefs.inc svneol=native#text/plain
