* renamed .h to .inc     * prepeared for dynamic linking support
git-svn-id: trunk@11530 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -3273,54 +3273,54 @@ packages/libxml/examples/reader2.pas svneol=native#text/plain
 packages/libxml/examples/test1.xml svneol=native#text/plain
 packages/libxml/examples/test2.xml svneol=native#text/plain
 packages/libxml/fpmake.pp svneol=native#text/plain
-packages/libxml/src/DOCBparser.h svneol=native#text/plain
-packages/libxml/src/HTMLparser.h svneol=native#text/plain
-packages/libxml/src/HTMLtree.h svneol=native#text/plain
-packages/libxml/src/SAX.h svneol=native#text/plain
-packages/libxml/src/SAX2.h svneol=native#text/plain
-packages/libxml/src/c14n.h svneol=native#text/plain
-packages/libxml/src/catalog.h svneol=native#text/plain
-packages/libxml/src/chvalid.h svneol=native#text/plain
-packages/libxml/src/debugXML.h svneol=native#text/plain
-packages/libxml/src/dict.h svneol=native#text/plain
-packages/libxml/src/encoding.h svneol=native#text/plain
-packages/libxml/src/entities.h svneol=native#text/plain
-packages/libxml/src/globals.h svneol=native#text/plain
-packages/libxml/src/hash.h svneol=native#text/plain
+packages/libxml/src/DOCBparser.inc svneol=native#text/plain
+packages/libxml/src/HTMLparser.inc svneol=native#text/plain
+packages/libxml/src/HTMLtree.inc svneol=native#text/plain
+packages/libxml/src/SAX.inc svneol=native#text/plain
+packages/libxml/src/SAX2.inc svneol=native#text/plain
+packages/libxml/src/c14n.inc svneol=native#text/plain
+packages/libxml/src/catalog.inc svneol=native#text/plain
+packages/libxml/src/chvalid.inc svneol=native#text/plain
+packages/libxml/src/debugXML.inc svneol=native#text/plain
+packages/libxml/src/dict.inc svneol=native#text/plain
+packages/libxml/src/encoding.inc svneol=native#text/plain
+packages/libxml/src/entities.inc svneol=native#text/plain
+packages/libxml/src/globals.inc svneol=native#text/plain
+packages/libxml/src/hash.inc svneol=native#text/plain
 packages/libxml/src/libxml2.pas svneol=native#text/plain
-packages/libxml/src/list.h svneol=native#text/plain
-packages/libxml/src/nanoftp.h svneol=native#text/plain
-packages/libxml/src/nanohttp.h svneol=native#text/plain
-packages/libxml/src/parser.h svneol=native#text/plain
-packages/libxml/src/parserInternals.h svneol=native#text/plain
-packages/libxml/src/pattern.h svneol=native#text/plain
-packages/libxml/src/relaxng.h svneol=native#text/plain
-packages/libxml/src/schemasInternals.h svneol=native#text/plain
-packages/libxml/src/schematron.h svneol=native#text/plain
-packages/libxml/src/threads.h svneol=native#text/plain
-packages/libxml/src/tree.h svneol=native#text/plain
-packages/libxml/src/uri.h svneol=native#text/plain
-packages/libxml/src/valid.h svneol=native#text/plain
-packages/libxml/src/xinclude.h svneol=native#text/plain
-packages/libxml/src/xlink.h svneol=native#text/plain
-packages/libxml/src/xmlIO.h svneol=native#text/plain
-packages/libxml/src/xmlautomata.h svneol=native#text/plain
-packages/libxml/src/xmlerror.h svneol=native#text/plain
-packages/libxml/src/xmlexports.h svneol=native#text/plain
-packages/libxml/src/xmlmemory.h svneol=native#text/plain
-packages/libxml/src/xmlmodule.h svneol=native#text/plain
-packages/libxml/src/xmlreader.h svneol=native#text/plain
-packages/libxml/src/xmlregexp.h svneol=native#text/plain
-packages/libxml/src/xmlsave.h svneol=native#text/plain
-packages/libxml/src/xmlschemas.h svneol=native#text/plain
-packages/libxml/src/xmlschemastypes.h svneol=native#text/plain
-packages/libxml/src/xmlstring.h svneol=native#text/plain
-packages/libxml/src/xmlunicode.h svneol=native#text/plain
-packages/libxml/src/xmlversion.h svneol=native#text/plain
-packages/libxml/src/xmlwriter.h svneol=native#text/plain
-packages/libxml/src/xpath.h svneol=native#text/plain
-packages/libxml/src/xpathInternals.h svneol=native#text/plain
-packages/libxml/src/xpointer.h svneol=native#text/plain
+packages/libxml/src/list.inc svneol=native#text/plain
+packages/libxml/src/nanoftp.inc svneol=native#text/plain
+packages/libxml/src/nanohttp.inc svneol=native#text/plain
+packages/libxml/src/parser.inc svneol=native#text/plain
+packages/libxml/src/parserInternals.inc svneol=native#text/plain
+packages/libxml/src/pattern.inc svneol=native#text/plain
+packages/libxml/src/relaxng.inc svneol=native#text/plain
+packages/libxml/src/schemasInternals.inc svneol=native#text/plain
+packages/libxml/src/schematron.inc svneol=native#text/plain
+packages/libxml/src/threads.inc svneol=native#text/plain
+packages/libxml/src/tree.inc svneol=native#text/plain
+packages/libxml/src/uri.inc svneol=native#text/plain
+packages/libxml/src/valid.inc svneol=native#text/plain
+packages/libxml/src/xinclude.inc svneol=native#text/plain
+packages/libxml/src/xlink.inc svneol=native#text/plain
+packages/libxml/src/xmlIO.inc svneol=native#text/plain
+packages/libxml/src/xmlautomata.inc svneol=native#text/plain
+packages/libxml/src/xmlerror.inc svneol=native#text/plain
+packages/libxml/src/xmlexports.inc svneol=native#text/plain
+packages/libxml/src/xmlmemory.inc svneol=native#text/plain
+packages/libxml/src/xmlmodule.inc svneol=native#text/plain
+packages/libxml/src/xmlreader.inc svneol=native#text/plain
+packages/libxml/src/xmlregexp.inc svneol=native#text/plain
+packages/libxml/src/xmlsave.inc svneol=native#text/plain
+packages/libxml/src/xmlschemas.inc svneol=native#text/plain
+packages/libxml/src/xmlschemastypes.inc svneol=native#text/plain
+packages/libxml/src/xmlstring.inc svneol=native#text/plain
+packages/libxml/src/xmlunicode.inc svneol=native#text/plain
+packages/libxml/src/xmlversion.inc svneol=native#text/plain
+packages/libxml/src/xmlwriter.inc svneol=native#text/plain
+packages/libxml/src/xpath.inc svneol=native#text/plain
+packages/libxml/src/xpathInternals.inc svneol=native#text/plain
+packages/libxml/src/xpointer.inc svneol=native#text/plain
 packages/lua/Makefile svneol=native#text/plain
 packages/lua/Makefile.fpc svneol=native#text/plain
 packages/lua/fpmake.pp svneol=native#text/plain
