* included libxml2 examples into build tree
git-svn-id: trunk@11533 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -3267,6 +3267,8 @@ packages/libxml/csrc/xmlwriter.h svneol=native#text/plain
 packages/libxml/csrc/xpath.h svneol=native#text/plain
 packages/libxml/csrc/xpathInternals.h svneol=native#text/plain
 packages/libxml/csrc/xpointer.h svneol=native#text/plain
+packages/libxml/examples/Makefile svneol=native#text/plain
+packages/libxml/examples/Makefile.fpc svneol=native#text/plain
 packages/libxml/examples/exutils.pas svneol=native#text/plain
 packages/libxml/examples/reader1.pas svneol=native#text/plain
 packages/libxml/examples/reader2.pas svneol=native#text/plain
