* method definitions in "child" interfaces also hide those in "parent"     interfaces, even if they only differ in resulttype (mantis #11862)   * fixing this required that multiple entries for the same method in a     interface vmt are all written out (change in     ImplementedInterface.AddImplProc)
git-svn-id: trunk@11595 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -8105,6 +8105,7 @@ tests/webtbf/tw1157a.pp svneol=native#text/plain
 tests/webtbf/tw11619b.pp svneol=native#text/plain
 tests/webtbf/tw11632.pp svneol=native#text/plain
 tests/webtbf/tw11848a.pp svneol=native#text/plain
+tests/webtbf/tw11862a.pp svneol=native#text/plain
 tests/webtbf/tw1238.pp svneol=native#text/plain
 tests/webtbf/tw1251a.pp svneol=native#text/plain
 tests/webtbf/tw1270.pp svneol=native#text/plain
@@ -8543,6 +8544,7 @@ tests/webtbs/tw1181.pp svneol=native#text/plain
 tests/webtbs/tw11848.pp svneol=native#text/plain
 tests/webtbs/tw11852.pp svneol=native#text/plain
 tests/webtbs/tw11861.pp svneol=native#text/plain
+tests/webtbs/tw11862.pp svneol=native#text/plain
 tests/webtbs/tw1203.pp svneol=native#text/plain
 tests/webtbs/tw1204.pp svneol=native#text/plain
 tests/webtbs/tw1207.pp svneol=native#text/plain
