* also free memory when a destructor is called without an explicit     instance reference (mantis 11896)   * fixed double destructor call in tests/test/cg/tcalcla1.pp which     caused an error after this change
git-svn-id: trunk@11599 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -8545,6 +8545,7 @@ tests/webtbs/tw11848.pp svneol=native#text/plain
 tests/webtbs/tw11852.pp svneol=native#text/plain
 tests/webtbs/tw11861.pp svneol=native#text/plain
 tests/webtbs/tw11862.pp svneol=native#text/plain
+tests/webtbs/tw11896.pp svneol=native#text/plain
 tests/webtbs/tw1203.pp svneol=native#text/plain
 tests/webtbs/tw1204.pp svneol=native#text/plain
 tests/webtbs/tw1207.pp svneol=native#text/plain
