* Patch from Paul Ishenin:   - added goption.inc with apropriate glib symbols   - added gincludes.inc which contains all other include files (similar to     gtk/gdk bindings and simlify inclusion into glib2.pas)   - checked/corrected all the .inc files and make them follow to template used in gtk/gdk (4 sections:     read_forward_definitions, read_interface_types, read_interface_rest, read_implementation)   - removed from most of .inc files unneeded comments that has been taken from original glib .h files. Some of     them were used by glib devels and others repeats official documentation.
git-svn-id: trunk@11617 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -2142,6 +2142,7 @@ packages/gtk2/src/glib/gerror.inc svneol=native#text/plain
 packages/gtk2/src/glib/gfileutils.inc svneol=native#text/plain
 packages/gtk2/src/glib/ghash.inc svneol=native#text/plain
 packages/gtk2/src/glib/ghook.inc svneol=native#text/plain
+packages/gtk2/src/glib/gincludes.inc svneol=native#text/plain
 packages/gtk2/src/glib/giochannel.inc svneol=native#text/plain
 packages/gtk2/src/glib/glib2.pas svneol=native#text/plain
 packages/gtk2/src/glib/glibconfig.inc svneol=native#text/plain
@@ -2155,6 +2156,7 @@ packages/gtk2/src/glib/gmessages.inc svneol=native#text/plain
 packages/gtk2/src/glib/gmodule.inc svneol=native#text/plain
 packages/gtk2/src/glib/gnode.inc svneol=native#text/plain
 packages/gtk2/src/glib/gobject.inc svneol=native#text/plain
+packages/gtk2/src/glib/goption.inc svneol=native#text/plain
 packages/gtk2/src/glib/gparam.inc svneol=native#text/plain
 packages/gtk2/src/glib/gparamspecs.inc svneol=native#text/plain
 packages/gtk2/src/glib/gpattern.inc svneol=native#text/plain
